fixed layout issue

--- a/src/app/blog-articles.component.css
+++ b/src/app/blog-articles.component.css
@@ -65,9 +65,3 @@ a {
         font-size: 1rem;
     }
 }
-
-@media screen and (max-width: 1420px) {
-    .margin-left {
-        margin-left: 0%
-    }
-}
